[gd_scene format=3 uid="uid://b815lhu2eb36k"]

[ext_resource type="PackedScene" uid="uid://c1kefqcinplw4" path="res://Script/spining_wheel_mean.tscn" id="1_ko6hv"]
[ext_resource type="Script" uid="uid://vvqp030w7ghc" path="res://Script/reward_system.gd" id="1_u1yxu"]
[ext_resource type="Texture2D" uid="uid://rq5gm6shv01" path="res://Assets/level/spin_wheel_arrow.png" id="2_tvlqe"]
[ext_resource type="PackedScene" uid="uid://o2faoesl5kb4" path="res://Scene/cancel_button.tscn" id="4_6ttjh"]
[ext_resource type="FontFile" uid="uid://c6reqbpdnikfh" path="res://Assets/Fonts/Pixel Game.otf" id="4_gh30k"]
[ext_resource type="Shader" path="res://shader/white_border_display.gdshader" id="5_jrc62"]
[ext_resource type="Texture2D" uid="uid://bepua85x3456" path="res://Assets/images/ad.png" id="5_qn1p5"]
[ext_resource type="AudioStream" uid="uid://khxwcuk2mn8c" path="res://Assets/Audio/roulette.mp3" id="6_rma5b"]
[ext_resource type="Script" uid="uid://ctr4wc8onnroy" path="res://addons/AdmobPlugin/Admob.gd" id="9_jrc62"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_rma5b"]
bg_color = Color(0, 0, 0, 0.53000003)
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[sub_resource type="ShaderMaterial" id="ShaderMaterial_i1htr"]
shader = ExtResource("5_jrc62")

[node name="Reward" type="Control" unique_id=234166329]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_bottom = -1414.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 10
size_flags_vertical = 10
script = ExtResource("1_u1yxu")

[node name="RewardSystem" type="CanvasLayer" parent="." unique_id=873514294]

[node name="CenterContainer" type="Control" parent="." unique_id=1300442200]
custom_minimum_size = Vector2(0, 800)
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -400.0
offset_bottom = 400.0
grow_horizontal = 2
grow_vertical = 2

[node name="SpiningWheel" parent="CenterContainer" unique_id=1288895353 instance=ExtResource("1_ko6hv")]
layout_mode = 1
segments = 8

[node name="TextureRect" type="TextureRect" parent="CenterContainer" unique_id=1846064144]
custom_minimum_size = Vector2(100, 100)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -50.0
offset_top = -50.0
offset_right = 50.0
offset_bottom = 50.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(101.09894, 1.098877)
size_flags_horizontal = 6
size_flags_vertical = 2
texture = ExtResource("2_tvlqe")
expand_mode = 1
flip_v = true

[node name="Button" type="Button" parent="." unique_id=1407311282]
custom_minimum_size = Vector2(400, 150)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = 444.0
offset_right = 200.0
offset_bottom = 594.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("4_gh30k")
theme_override_font_sizes/font_size = 71
theme_override_styles/normal = SubResource("StyleBoxFlat_rma5b")
theme_override_styles/normal_mirrored = SubResource("StyleBoxFlat_rma5b")
theme_override_styles/pressed = SubResource("StyleBoxFlat_rma5b")
theme_override_styles/pressed_mirrored = SubResource("StyleBoxFlat_rma5b")
theme_override_styles/hover = SubResource("StyleBoxFlat_rma5b")
theme_override_styles/hover_mirrored = SubResource("StyleBoxFlat_rma5b")
theme_override_styles/hover_pressed = SubResource("StyleBoxFlat_rma5b")
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxFlat_rma5b")
theme_override_styles/disabled = SubResource("StyleBoxFlat_rma5b")
theme_override_styles/disabled_mirrored = SubResource("StyleBoxFlat_rma5b")
theme_override_styles/focus = SubResource("StyleBoxFlat_rma5b")
expand_icon = true

[node name="HBoxContainer" type="HBoxContainer" parent="Button" unique_id=1627541745]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -87.5
offset_top = -57.5
offset_right = 87.5
offset_bottom = 57.5
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_constants/separation = 40

[node name="TextureRect" type="TextureRect" parent="Button/HBoxContainer" unique_id=625061271]
visible = false
material = SubResource("ShaderMaterial_i1htr")
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
texture = ExtResource("5_qn1p5")
expand_mode = 2

[node name="Label" type="Label" parent="Button/HBoxContainer" unique_id=71543193]
layout_mode = 2
theme_override_font_sizes/font_size = 84
text = "Spin"
horizontal_alignment = 1

[node name="TextureButton" parent="." unique_id=738153549 instance=ExtResource("4_6ttjh")]
visible = false
layout_mode = 1
anchors_preset = -1
offset_left = 85.0
offset_top = 95.0

[node name="AudioStreamPlayer3D" type="AudioStreamPlayer3D" parent="." unique_id=44554318]
stream = ExtResource("6_rma5b")

[node name="ShopAdmob" type="Node" parent="." unique_id=436199369]
script = ExtResource("9_jrc62")
android_debug_application_id = "ca-app-pub-3940256099942544~3347511713"
metadata/_custom_type_script = "uid://ctr4wc8onnroy"

[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="TextureButton" to="." method="_on_texture_button_pressed"]
[connection signal="consent_form_loaded" from="ShopAdmob" to="." method="_on_shop_admob_consent_form_loaded"]
[connection signal="consent_info_updated" from="ShopAdmob" to="." method="_on_shop_admob_consent_info_updated"]
[connection signal="initialization_completed" from="ShopAdmob" to="." method="_on_shop_admob_initialization_completed"]
[connection signal="rewarded_ad_loaded" from="ShopAdmob" to="." method="_on_shop_admob_rewarded_ad_loaded"]
[connection signal="rewarded_ad_showed_full_screen_content" from="ShopAdmob" to="." method="_on_shop_admob_rewarded_ad_showed_full_screen_content"]
[connection signal="rewarded_ad_user_earned_reward" from="ShopAdmob" to="." method="_on_shop_admob_rewarded_ad_user_earned_reward"]
